fix(Dialog.js): set body overflow to 'hidden' when dialog is open and reset it when dialog is closed style(left-slide-in-.css): remove body overflow styling when dialog is open style(left-slide-in-checkout-.css): remove body overflow styling when dialog is open style(left-slide-in-wide-.css): remove body overflow styling when dialog is open style(left-slide-in-without-background-.css): remove body overflow styling when dialog is open

--- a/src/es/components/molecules/dialog/left-slide-in-checkout-/left-slide-in-checkout-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-checkout-/left-slide-in-checkout-.css
@@ -1,7 +1,3 @@
-body:has(dialog[open]) {
-  overflow: hidden;
-}
-
 :host>dialog[open] {
   /* open */
   opacity: 1;
