--- a/src/es/components/molecules/dialog/left-slide-in-without-background-/left-slide-in-without-background-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-without-background-/left-slide-in-without-background-.css
@@ -1,7 +1,3 @@
-body:has(dialog[open]) {
-  overflow: hidden;
-}
-
 :host {
   /* button margin and padding */
   --margin: auto 0;
